@@ -33,7 +33,7 @@
 .if !'\\$1'0' .sp
 ..
 .\" ---------------------------------------------------------------------------
-.TH \f3cdecl\fP 1 "December 1, 2020" "PJL TOOLS"
+.TH \f3cdecl\fP 1 "December 3, 2020" "PJL TOOLS"
 .SH NAME
 cdecl, c++decl \- compose and decipher C & C++ declarations and casts
 .SH SYNOPSIS
@@ -2108,12 +2108,7 @@ that do not provide genuine GNU
 .SS Unsupported Declarations
 The following types of declarations are not currently supported:
 .nr step 1 1
-.IP \n[step]. 4
-Multiple comma-separated declarations are not supported:
-.cS
-int i, *p;                      // not supported
-.cE 0
-.IP \n+[step].
+.IP \n[step]. 3
 Only
 \f(CWenum\fP,
 \f(CWclass\fP,
