@@ -1,0 +1,2 @@
+declare x as int
+declare y as int
