@@ -1,0 +1,2 @@
+declare x as int
+declare p as pointer to int
