@@ -1,0 +1,1 @@
+cdecl @ @ @ explain int x, *p @ 0
